<resources>
    <string name="homepage">首页</string>
    <string name="category">类目</string>
    <string name="channel">频道</string>
    <string name="car">采购单</string>
    <string name="center">中心</string>
    <string name="exit_app_tips">再按一次退出程序</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_incorrect_password">密码输入错误</string>
    <string name="error_field_required">此项为必填项</string>
    <string name="permission_rationale">需要联系人权限</string>
    <string name="trans">翻译</string>
</resources>
